Changed image sources in Resume page

--- a/resume.html
+++ b/resume.html
@@ -183,7 +183,7 @@
         <a href="safechat.html">
           <img
             loading="lazy"
-            srcset="https://cdn.builder.io/api/v1/image/assets/TEMP/f56b428e3c2f88b1fc41aa5decb1e745f21d4d04b7fd3525e8915f63f7a13a9d?apiKey=e0e370d878974b25a6e3d058316b06d7&width=100 100w, https://cdn.builder.io/api/v1/image/assets/TEMP/f56b428e3c2f88b1fc41aa5decb1e745f21d4d04b7fd3525e8915f63f7a13a9d?apiKey=e0e370d878974b25a6e3d058316b06d7&width=200 200w, https://cdn.builder.io/api/v1/image/assets/TEMP/f56b428e3c2f88b1fc41aa5decb1e745f21d4d04b7fd3525e8915f63f7a13a9d?apiKey=e0e370d878974b25a6e3d058316b06d7&width=400 400w, https://cdn.builder.io/api/v1/image/assets/TEMP/f56b428e3c2f88b1fc41aa5decb1e745f21d4d04b7fd3525e8915f63f7a13a9d?apiKey=e0e370d878974b25a6e3d058316b06d7&width=800 800w, https://cdn.builder.io/api/v1/image/assets/TEMP/f56b428e3c2f88b1fc41aa5decb1e745f21d4d04b7fd3525e8915f63f7a13a9d?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1200 1200w, https://cdn.builder.io/api/v1/image/assets/TEMP/f56b428e3c2f88b1fc41aa5decb1e745f21d4d04b7fd3525e8915f63f7a13a9d?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1600 1600w, https://cdn.builder.io/api/v1/image/assets/TEMP/f56b428e3c2f88b1fc41aa5decb1e745f21d4d04b7fd3525e8915f63f7a13a9d?apiKey=e0e370d878974b25a6e3d058316b06d7&width=2000 2000w, https://cdn.builder.io/api/v1/image/assets/TEMP/f56b428e3c2f88b1fc41aa5decb1e745f21d4d04b7fd3525e8915f63f7a13a9d?apiKey=e0e370d878974b25a6e3d058316b06d7&"
+            src="images/index/safechat.png"
             class="img-2"
           />
         </a>
@@ -192,7 +192,7 @@
         <a href="capstone.html">
           <img
             loading="lazy"
-            srcset="https://cdn.builder.io/api/v1/image/assets/TEMP/a0b2ddb55bbc6ecab38f6257ecf7264d9affa6f57e4408473d081d558957400f?apiKey=e0e370d878974b25a6e3d058316b06d7&width=100 100w, https://cdn.builder.io/api/v1/image/assets/TEMP/a0b2ddb55bbc6ecab38f6257ecf7264d9affa6f57e4408473d081d558957400f?apiKey=e0e370d878974b25a6e3d058316b06d7&width=200 200w, https://cdn.builder.io/api/v1/image/assets/TEMP/a0b2ddb55bbc6ecab38f6257ecf7264d9affa6f57e4408473d081d558957400f?apiKey=e0e370d878974b25a6e3d058316b06d7&width=400 400w, https://cdn.builder.io/api/v1/image/assets/TEMP/a0b2ddb55bbc6ecab38f6257ecf7264d9affa6f57e4408473d081d558957400f?apiKey=e0e370d878974b25a6e3d058316b06d7&width=800 800w, https://cdn.builder.io/api/v1/image/assets/TEMP/a0b2ddb55bbc6ecab38f6257ecf7264d9affa6f57e4408473d081d558957400f?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1200 1200w, https://cdn.builder.io/api/v1/image/assets/TEMP/a0b2ddb55bbc6ecab38f6257ecf7264d9affa6f57e4408473d081d558957400f?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1600 1600w, https://cdn.builder.io/api/v1/image/assets/TEMP/a0b2ddb55bbc6ecab38f6257ecf7264d9affa6f57e4408473d081d558957400f?apiKey=e0e370d878974b25a6e3d058316b06d7&width=2000 2000w, https://cdn.builder.io/api/v1/image/assets/TEMP/a0b2ddb55bbc6ecab38f6257ecf7264d9affa6f57e4408473d081d558957400f?apiKey=e0e370d878974b25a6e3d058316b06d7&"
+            src="images/index/capstone.png"
             class="img-3"
           />
         </a>
@@ -201,7 +201,7 @@
         <a href="islandwood.html">
           <img
             loading="lazy"
-            srcset="https://cdn.builder.io/api/v1/image/assets/TEMP/fd4b45b40b1db3de66ec973233b61e5d961b093d9db02c10563f8d2074a58f88?apiKey=e0e370d878974b25a6e3d058316b06d7&width=100 100w, https://cdn.builder.io/api/v1/image/assets/TEMP/fd4b45b40b1db3de66ec973233b61e5d961b093d9db02c10563f8d2074a58f88?apiKey=e0e370d878974b25a6e3d058316b06d7&width=200 200w, https://cdn.builder.io/api/v1/image/assets/TEMP/fd4b45b40b1db3de66ec973233b61e5d961b093d9db02c10563f8d2074a58f88?apiKey=e0e370d878974b25a6e3d058316b06d7&width=400 400w, https://cdn.builder.io/api/v1/image/assets/TEMP/fd4b45b40b1db3de66ec973233b61e5d961b093d9db02c10563f8d2074a58f88?apiKey=e0e370d878974b25a6e3d058316b06d7&width=800 800w, https://cdn.builder.io/api/v1/image/assets/TEMP/fd4b45b40b1db3de66ec973233b61e5d961b093d9db02c10563f8d2074a58f88?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1200 1200w, https://cdn.builder.io/api/v1/image/assets/TEMP/fd4b45b40b1db3de66ec973233b61e5d961b093d9db02c10563f8d2074a58f88?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1600 1600w, https://cdn.builder.io/api/v1/image/assets/TEMP/fd4b45b40b1db3de66ec973233b61e5d961b093d9db02c10563f8d2074a58f88?apiKey=e0e370d878974b25a6e3d058316b06d7&width=2000 2000w, https://cdn.builder.io/api/v1/image/assets/TEMP/fd4b45b40b1db3de66ec973233b61e5d961b093d9db02c10563f8d2074a58f88?apiKey=e0e370d878974b25a6e3d058316b06d7&"
+            src="images/index/islandwood.png"
             class="img-4"
           />
         </a>
