Added Flappy Bird link

--- a/archived.html
+++ b/archived.html
@@ -57,11 +57,13 @@
               <div class="column-3">
                 <div class="div-24">
                   <div class="div-25">
-                    <img
-                      loading="lazy"
-                      src="images/archived/flappybird.png"
-                      class="img"
-                    />
+                    <a href="https://katiexh-0751413.github.io/MP3game" target="_blank">
+                      <img
+                        loading="lazy"
+                        src="images/archived/flappybird.png"
+                        class="img"
+                      />
+                    </a>                    
                   </div>
                   <div class="div-26">Flappy Bird</div>
                   <div class="div-27">
