add storyboards and all photos for safechat page pls

--- a/safechat.html
+++ b/safechat.html
@@ -83,16 +83,20 @@
       <div>
         <span class="text">To capture Mike's experience, we created a user journey map that highlighted his emotions, pain points, and moments of satisfaction while engaging with SafeChat.</span>
       </div>
-    </div>
-    <div class="div-11" style="margin-top: 2200px;">
-      <figure>
-        <img
-          loading="lazy"
-          src="images/safechat/mikeuserjourney.png"
-          class="userjourney"
-        />
-        <figcaption style="text-align: center; margin-left: 0px;"><i>Mike's User Journey Map</i></figcaption>
-      </figure>
+      <div class="div-11">
+        <figure>
+          <img
+            loading="lazy"
+            src="images/safechat/mikeuserjourney.png"
+            class="userjourney"
+          />
+          <figcaption style="text-align: center; margin-left: 0px;"><i>Mike's User Journey Map</i></figcaption>
+        </figure>
+      </div>
+      <div class="subtitle">STORYBOARDING THE EXPERIENCE</div>
+      <div>
+        <span class="text">Visual storyboards outlined crucial user moments and emotions throughout SafeChat's mental health support journey.</span>
+      </div>
     </div>
   </div>
 </div>
@@ -251,12 +255,16 @@
   figcaption {
     font-size: 24px;
     font-weight: 500;
-    margin-left: 300px;
-    margin-top: 30px;
+    margin: 30px 0 50px 275px;
   }
   .userjourney {
     display: block;
     margin-left: 115px;
     width: 85%;
+  }
+  .div-11 {
+    margin-top: 75px;
+    margin-left: -410px;
+    width: 170%;
   }
 </style>
