slapped everything onto safechat

--- a/safechat.html
+++ b/safechat.html
@@ -97,6 +97,221 @@
       <div>
         <span class="text">Visual storyboards outlined crucial user moments and emotions throughout SafeChat's mental health support journey.</span>
       </div>
+      <div class="div-11">
+        <figure>
+          <img
+            loading="lazy"
+            src="images/safechat/storyboard1.png"
+            class="userjourney"
+          />
+          <figcaption style="text-align: center; margin-left: 0px; margin-bottom: 100px"><i>Storyboard Created with Storyboard That</i></figcaption>
+        </figure>
+        <figure>
+          <img
+            loading="lazy"
+            src="images/safechat/storyboard2.png"
+            class="userjourney"
+          />
+          <figcaption style="text-align: center; margin-left: 0px; margin-bottom: 100px"><i>Storyboard Created with Storyboard That</i></figcaption>
+        </figure>
+        <figure>
+          <img
+            loading="lazy"
+            src="images/safechat/storyboard3.png"
+            class="userjourney"
+          />
+          <figcaption style="text-align: center; margin-left: 0px;"><i>Storyboard Created with Storyboard Images, where I dressed up as Mike</i></figcaption>
+        </figure>
+      </div>
+      <div class="subtitle">INTERFACE SKETCHES</div>
+      <div>
+        <span class="text">I used pencil-and-paper sketches to brainstorm and conceptualize ideas, capturing initial thoughts and design elements for the app's interface.</span>
+      </div>
+      <div class="div-11">
+        <div class="inline-block" style="text-align: center">
+          <img
+            loading="lazy"
+            src="images/safechat/sketch1.png"
+            class="sketches"
+          />
+          <img
+            loading="lazy"
+            src="images/safechat/sketch2.png"
+            class="sketches"
+          />
+          <img
+            loading="lazy"
+            src="images/safechat/sketch3.png"
+            class="sketches"
+          />
+        </div>
+        <div class="inline-block" style="text-align: center">
+          <img
+            loading="lazy"
+            src="images/safechat/sketch4.png"
+            class="sketches"
+          />
+          <img
+            loading="lazy"
+            src="images/safechat/sketch5.png"
+            class="sketches"
+          />
+        </div>
+      </div>
+      <div class="subtitle">LOW-FIDELITY WIREFRAMES</div>
+      <div>
+        <span class="text">We crafted low-fidelity wireframes in Figma to visualize SafeChat's interface structure. Utilizing simple shapes and basic elements, they outlined the layout and placement of key features within the app.</span>
+      </div>
+      <div class="div-11">
+        <img
+          loading="lazy"
+          src="images/safechat/lofi.png"
+          class="userjourney"
+        />
+      </div>
+      <div class="subtitle">ANNOTATED WIREFRAMES</div>
+      <div>
+        <span class="text">I annotated each wireframe, providing an in-depth depiction of the app's functionalities and interactions.</span>
+      </div>
+      <div class="div-11">
+        <img
+          loading="lazy"
+          src="images/safechat/aw1.png"
+          class="userjourney"
+        />
+        <img
+          loading="lazy"
+          src="images/safechat/aw2.png"
+          class="userjourney"
+        />
+        <img
+          loading="lazy"
+          src="images/safechat/aw3.png"
+          class="userjourney"
+        />
+        <img
+          loading="lazy"
+          src="images/safechat/aw4.png"
+          class="userjourney"
+        />
+      </div>
+      <div class="subtitle">HIGH-FIDELITY PROTOTYPE</div>
+      <div>
+        <span class="text">Our team developed high-fidelity prototypes, undergoing significant iterations to enhance visual appeal and user interactions. Later, I undertook an independent iterative redesign, focusing on refining the UI and improving user experience.</span>
+      </div>
+      <div class="div-11">
+        <img
+          loading="lazy"
+          src="images/safechat/hifi1.png"
+          class="userjourney"
+        />
+        <img
+          loading="lazy"
+          src="images/safechat/hifi2.png"
+          class="userjourney"
+        />
+        <img
+          loading="lazy"
+          src="images/safechat/hifi3.png"
+          class="userjourney"
+        />
+        <img
+          loading="lazy"
+          src="images/safechat/hifi4.png"
+          class="userjourney"
+        />
+        <img
+          loading="lazy"
+          src="images/safechat/hifi5.png"
+          class="userjourney"
+        />
+        <img
+          loading="lazy"
+          src="images/safechat/hifi6.png"
+          class="userjourney"
+        />
+        <img
+          loading="lazy"
+          src="images/safechat/hifi7.png"
+          class="userjourney"
+        />
+        <img
+          loading="lazy"
+          src="images/safechat/hifi8.png"
+          class="userjourney"
+        />
+        <img
+          loading="lazy"
+          src="images/safechat/hifi9.png"
+          class="userjourney"
+        />
+        <img
+          loading="lazy"
+          src="images/safechat/hifi10.png"
+          class="userjourney"
+        />
+        <img
+          loading="lazy"
+          src="images/safechat/hifi11.png"
+          class="userjourney"
+        />
+      </div>
+      <div class="subtitle">REFLECTIONS & KEY TAKEAWAYS</div>
+      <div style="margin-bottom: 15px;">
+        <span class="text">The design journey was a learning curve, emphasizing the value of upfront work in the low-fidelity stage, user feedback, and robust usability testing. Challenges emerged from inexperience, particularly in translating insights into personas and AI-based support. However, adapting to user concerns led to a successful pivot in the design process.</span>
+      </div>
+      <div style="margin-bottom: 15px;">
+        <span class="text">Our project underscored the importance of inclusivity and accessibility. While our personas were diverse, we recognized the need for broader user group representation. A more extensive user research phase would have ensured a more inclusive design.</span>
+      </div>
+      <div style="margin-bottom: 15px;">
+        <span class="text">My independent redesign process highlighted the significance of iterative design, incorporating new insights to refine both aesthetics and usability. Collaborative efforts proved rewarding, showcasing the power of teamwork in shaping SafeChat into a refined, user-centric platform.</span>
+      </div>
+      <div>
+        <span class="text">Through dedication, communication, and a cohesive team culture, we were able to craft a mental health support platform that surpassed individual contributions, evolving SafeChat into a more refined and user-centric platform.</span>
+      </div>
+      <div class="div-11 inline-block" style="margin-top: 100px; text-align: center">
+        <a>
+          <img
+            loading="lazy"
+            src="images/index/capstone.png"
+            class="index"
+          />
+        </a>
+        <a>
+          <img
+            loading="lazy"
+            src="images/index/islandwood.png"
+            class="index"
+          />
+        </a>
+        <a>
+          <img
+            loading="lazy"
+            src="images/index/itinero.png"
+            class="index"
+          />
+        </a>
+      </div>
+    </div>
+  </div>
+  <div class="div-19">
+    <div class="div-20">© Designed and Developed by Katie Hancock</div>
+    <div class="div-21">
+      <!-- Gmail -->
+      <a href=mailto:"katiexinran@gmail.com">
+        <img
+          loading="lazy"
+          srcset="https://cdn.builder.io/api/v1/image/assets/TEMP/afd7668f1589eb19acd5ba1d4a1a63d3536cc5f6584357948d99a94bb54f8bee?apiKey=e0e370d878974b25a6e3d058316b06d7&width=100 100w, https://cdn.builder.io/api/v1/image/assets/TEMP/afd7668f1589eb19acd5ba1d4a1a63d3536cc5f6584357948d99a94bb54f8bee?apiKey=e0e370d878974b25a6e3d058316b06d7&width=200 200w, https://cdn.builder.io/api/v1/image/assets/TEMP/afd7668f1589eb19acd5ba1d4a1a63d3536cc5f6584357948d99a94bb54f8bee?apiKey=e0e370d878974b25a6e3d058316b06d7&width=400 400w, https://cdn.builder.io/api/v1/image/assets/TEMP/afd7668f1589eb19acd5ba1d4a1a63d3536cc5f6584357948d99a94bb54f8bee?apiKey=e0e370d878974b25a6e3d058316b06d7&width=800 800w, https://cdn.builder.io/api/v1/image/assets/TEMP/afd7668f1589eb19acd5ba1d4a1a63d3536cc5f6584357948d99a94bb54f8bee?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1200 1200w, https://cdn.builder.io/api/v1/image/assets/TEMP/afd7668f1589eb19acd5ba1d4a1a63d3536cc5f6584357948d99a94bb54f8bee?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1600 1600w, https://cdn.builder.io/api/v1/image/assets/TEMP/afd7668f1589eb19acd5ba1d4a1a63d3536cc5f6584357948d99a94bb54f8bee?apiKey=e0e370d878974b25a6e3d058316b06d7&width=2000 2000w, https://cdn.builder.io/api/v1/image/assets/TEMP/afd7668f1589eb19acd5ba1d4a1a63d3536cc5f6584357948d99a94bb54f8bee?apiKey=e0e370d878974b25a6e3d058316b06d7&"
+          class="img-5"
+        />
+      </a>
+      <a href="https://www.linkedin.com/in/katiexhancock/" target="_blank">
+        <img
+          loading="lazy"
+          srcset="https://cdn.builder.io/api/v1/image/assets/TEMP/757294552fa8647d0415832b6a4a8b9f5321cca4bfcdd8f3e0c73082f32c73c7?apiKey=e0e370d878974b25a6e3d058316b06d7&width=100 100w, https://cdn.builder.io/api/v1/image/assets/TEMP/757294552fa8647d0415832b6a4a8b9f5321cca4bfcdd8f3e0c73082f32c73c7?apiKey=e0e370d878974b25a6e3d058316b06d7&width=200 200w, https://cdn.builder.io/api/v1/image/assets/TEMP/757294552fa8647d0415832b6a4a8b9f5321cca4bfcdd8f3e0c73082f32c73c7?apiKey=e0e370d878974b25a6e3d058316b06d7&width=400 400w, https://cdn.builder.io/api/v1/image/assets/TEMP/757294552fa8647d0415832b6a4a8b9f5321cca4bfcdd8f3e0c73082f32c73c7?apiKey=e0e370d878974b25a6e3d058316b06d7&width=800 800w, https://cdn.builder.io/api/v1/image/assets/TEMP/757294552fa8647d0415832b6a4a8b9f5321cca4bfcdd8f3e0c73082f32c73c7?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1200 1200w, https://cdn.builder.io/api/v1/image/assets/TEMP/757294552fa8647d0415832b6a4a8b9f5321cca4bfcdd8f3e0c73082f32c73c7?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1600 1600w, https://cdn.builder.io/api/v1/image/assets/TEMP/757294552fa8647d0415832b6a4a8b9f5321cca4bfcdd8f3e0c73082f32c73c7?apiKey=e0e370d878974b25a6e3d058316b06d7&width=2000 2000w, https://cdn.builder.io/api/v1/image/assets/TEMP/757294552fa8647d0415832b6a4a8b9f5321cca4bfcdd8f3e0c73082f32c73c7?apiKey=e0e370d878974b25a6e3d058316b06d7&"
+          class="img-6"
+        />
+      </a>
     </div>
   </div>
 </div>
@@ -266,5 +481,15 @@
     margin-top: 75px;
     margin-left: -410px;
     width: 170%;
+  }
+  .sketches {
+    width: 25%;
+    padding: 20px;
+    height: 532px;
+    width: 409px;
+  }
+  .index {
+    width: 30%;
+    padding: 20px;
   }
 </style>
