added links to safechat

--- a/safechat.html
+++ b/safechat.html
@@ -270,21 +270,21 @@
         <span class="text">Through dedication, communication, and a cohesive team culture, we were able to craft a mental health support platform that surpassed individual contributions, evolving SafeChat into a more refined and user-centric platform.</span>
       </div>
       <div class="div-11 inline-block" style="margin-top: 100px; text-align: center">
-        <a>
+        <a href="capstone.html">
           <img
             loading="lazy"
             src="images/index/capstone.png"
             class="index"
           />
         </a>
-        <a>
+        <a href="islandwood.html">
           <img
             loading="lazy"
             src="images/index/islandwood.png"
             class="index"
           />
         </a>
-        <a>
+        <a href="itinero.html">
           <img
             loading="lazy"
             src="images/index/itinero.png"
