Added links for archived pages, added pdf folder

--- a/archived.html
+++ b/archived.html
@@ -19,13 +19,15 @@
         <div class="div-12">
           <div class="div-13">
             <div class="div-14">
-              <img
-                loading="lazy"
-                src="./images/archived/instagramshopping.png"
-                class="img"
-                alt="Instagram Shopping"
-              />
-            </div>
+              <a href="./pdfs/InstagramShoppingFinalReport.pdf" target="_blank">
+                <img
+                  loading="lazy"
+                  src="./images/archived/instagramshopping.png"
+                  class="img"
+                  alt="Instagram Shopping"
+                />
+              </a>
+            </div>            
           </div>
           <div class="div-15">Instagram Shopping Usability Study</div>
           <div class="div-16">
@@ -46,7 +48,7 @@
           <div class="div-20">
             Conducted an in-depth safety research study on Sound Transit's light
             rail system focusing on nighttime commuter safety, with proposed
-            strategies aimed at enhancing safety measures for passengers..
+            strategies aimed at enhancing safety measures for passengers.
           </div>
         </div>
       </div>
@@ -98,11 +100,13 @@
             <div class="div-34">
               <div class="column-5">
                 <div class="div-35">
-                  <img
-                    loading="lazy"
-                    src="./images/archived/paint.png"
-                    class="img"
-                  />
+                  <a href="https://katiexh-0751413.github.io/PaintFinal/" target="_blank">
+                    <img
+                      loading="lazy"
+                      src="./images/archived/paint.png"
+                      class="img"
+                    />
+                  </a>
                   <div class="div-36">Paint</div>
                   <div class="div-37">
                     Crafted an immersive paint web application with HTML, CSS,
@@ -110,17 +114,19 @@
                     creativity through intuitive tools and a seamless user
                     interface.
                   </div>
-                </div>
+                </div>                
               </div>
               <div class="column-6">
                 <div class="div-38">
-                  <div class="div-39">
-                    <img
-                      loading="lazy"
-                      src="./images/archived/tableau.png"
-                      class="img"
-                    />
-                  </div>
+                  <a href="https://public.tableau.com/app/profile/ryan.bautista6072/viz/shared/MQB7H3G5Q" target="_blank">
+                    <div class="div-39">
+                      <img
+                        loading="lazy"
+                        src="./images/archived/tableau.png"
+                        class="img"
+                      />
+                    </div>
+                  </a>
                   <div class="div-40">
                     Analysis on Global Work Hours & Depression
                   </div>
@@ -129,7 +135,7 @@
                     depression rates across 65 countries, visualizing findings
                     through a concise Tableau dashboard.
                   </div>
-                </div>
+                </div>                
               </div>
             </div>
           </div>
