Fixed margins on Capstone

--- a/capstone.html
+++ b/capstone.html
@@ -13,6 +13,7 @@
         <div class="div-9"><a href="resume.html">Resume</a></div>
       </div>
     </div>
+    <!-- Top banner under navbar -->
     <img
       loading="lazy"
       srcset="https://cdn.builder.io/api/v1/image/assets/TEMP/b02bbccc5c5758334a4264d7bed0e15cb774fdbfea1c818a9a2698fc1e6b75c3?apiKey=e0e370d878974b25a6e3d058316b06d7&width=100 100w, https://cdn.builder.io/api/v1/image/assets/TEMP/b02bbccc5c5758334a4264d7bed0e15cb774fdbfea1c818a9a2698fc1e6b75c3?apiKey=e0e370d878974b25a6e3d058316b06d7&width=200 200w, https://cdn.builder.io/api/v1/image/assets/TEMP/b02bbccc5c5758334a4264d7bed0e15cb774fdbfea1c818a9a2698fc1e6b75c3?apiKey=e0e370d878974b25a6e3d058316b06d7&width=400 400w, https://cdn.builder.io/api/v1/image/assets/TEMP/b02bbccc5c5758334a4264d7bed0e15cb774fdbfea1c818a9a2698fc1e6b75c3?apiKey=e0e370d878974b25a6e3d058316b06d7&width=800 800w, https://cdn.builder.io/api/v1/image/assets/TEMP/b02bbccc5c5758334a4264d7bed0e15cb774fdbfea1c818a9a2698fc1e6b75c3?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1200 1200w, https://cdn.builder.io/api/v1/image/assets/TEMP/b02bbccc5c5758334a4264d7bed0e15cb774fdbfea1c818a9a2698fc1e6b75c3?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1600 1600w, https://cdn.builder.io/api/v1/image/assets/TEMP/b02bbccc5c5758334a4264d7bed0e15cb774fdbfea1c818a9a2698fc1e6b75c3?apiKey=e0e370d878974b25a6e3d058316b06d7&width=2000 2000w, https://cdn.builder.io/api/v1/image/assets/TEMP/b02bbccc5c5758334a4264d7bed0e15cb774fdbfea1c818a9a2698fc1e6b75c3?apiKey=e0e370d878974b25a6e3d058316b06d7&"
@@ -21,6 +22,7 @@
   </div>
   <div class="div-10">
     <div class="div-11">
+      <!-- Logo -->
       <img
         loading="lazy"
         srcset="https://cdn.builder.io/api/v1/image/assets/TEMP/eb57e3035408349b53cb3f789d4ed6553e1b5dcb9c95ac130dc39b0e00753df3?apiKey=e0e370d878974b25a6e3d058316b06d7&width=100 100w, https://cdn.builder.io/api/v1/image/assets/TEMP/eb57e3035408349b53cb3f789d4ed6553e1b5dcb9c95ac130dc39b0e00753df3?apiKey=e0e370d878974b25a6e3d058316b06d7&width=200 200w, https://cdn.builder.io/api/v1/image/assets/TEMP/eb57e3035408349b53cb3f789d4ed6553e1b5dcb9c95ac130dc39b0e00753df3?apiKey=e0e370d878974b25a6e3d058316b06d7&width=400 400w, https://cdn.builder.io/api/v1/image/assets/TEMP/eb57e3035408349b53cb3f789d4ed6553e1b5dcb9c95ac130dc39b0e00753df3?apiKey=e0e370d878974b25a6e3d058316b06d7&width=800 800w, https://cdn.builder.io/api/v1/image/assets/TEMP/eb57e3035408349b53cb3f789d4ed6553e1b5dcb9c95ac130dc39b0e00753df3?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1200 1200w, https://cdn.builder.io/api/v1/image/assets/TEMP/eb57e3035408349b53cb3f789d4ed6553e1b5dcb9c95ac130dc39b0e00753df3?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1600 1600w, https://cdn.builder.io/api/v1/image/assets/TEMP/eb57e3035408349b53cb3f789d4ed6553e1b5dcb9c95ac130dc39b0e00753df3?apiKey=e0e370d878974b25a6e3d058316b06d7&width=2000 2000w, https://cdn.builder.io/api/v1/image/assets/TEMP/eb57e3035408349b53cb3f789d4ed6553e1b5dcb9c95ac130dc39b0e00753df3?apiKey=e0e370d878974b25a6e3d058316b06d7&"
