--- a/safechat.html
+++ b/safechat.html
@@ -177,7 +177,7 @@
       <div>
         <span class="text">We crafted low-fidelity wireframes in Figma to visualize SafeChat's interface structure. Utilizing simple shapes and basic elements, they outlined the layout and placement of key features within the app.</span>
       </div>
-      <div class="div-11">
+      <div class="div-11" style="margin-bottom: 100px">
         <img
           loading="lazy"
           src="images/safechat/lofi.png"
@@ -193,21 +193,25 @@
           loading="lazy"
           src="images/safechat/aw1.png"
           class="userjourney"
+          style="margin-bottom: 50px"
         />
         <img
           loading="lazy"
           src="images/safechat/aw2.png"
           class="userjourney"
+          style="margin-bottom: 50px"
         />
         <img
           loading="lazy"
           src="images/safechat/aw3.png"
           class="userjourney"
+          style="margin-bottom: 50px"
         />
         <img
           loading="lazy"
           src="images/safechat/aw4.png"
           class="userjourney"
+          style="margin-bottom: 50px"
         />
       </div>
       <div class="subtitle">HIGH-FIDELITY PROTOTYPE</div>
